fix: Switch to YAMLJS runtime loading
